--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chakra": "^0.0.3",
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
+    "openai": "^4.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
