--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "start": "^5.1.0",
     "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.0"
   },
